# H-VibeRec

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: DEPLOYMENT.en.md  DEPLOYMENT.zh-CN.md  REFACTORING_FIXES.md  (+1 more)
src-tauri/: .taurignore  Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/assets/templates/: action_items.txt  decision_process.txt  metadata.json  speaker_summary.txt  timeline_risk_analysis.txt  topic_classification.txt
src-tauri/icons/: app_icon.icns  icon.icns
src-tauri/src/: asr_worker.rs  db.rs  lib.rs  llm.rs  local_queue.rs  main.rs  sidecar.rs
src-tauri/src/audio/: core.rs  mod.rs  processing.rs
src-tauri/src/commands/: assistant.rs  devices.rs  files.rs  local.rs  mod.rs  recording.rs  voice_input.rs
src-tauri/src/db/: assistant.rs  model_status.rs  queue.rs  recordings.rs  schema.rs  settings.rs  templates.rs  voice_input_stats.rs
src-tauri/src/db/assistant/: messages.rs  runs.rs  scope.rs  sessions.rs
src-tauri/src/db/queue/: local_jobs.rs  pipeline.rs  records.rs  summary_jobs.rs  transcription_jobs.rs
src-tauri/src/files/: export.rs  import.rs  manager.rs  mod.rs
src-tauri/src/recording/: buffer.rs  controller.rs  microphone.rs  mixed.rs  mod.rs  state.rs
src-tauri/src/storage/: encoding.rs  mod.rs  paths.rs  temp_files.rs
src-tauri/src/tests/: db_queue.rs  mod.rs  voice_input.rs
src-tauri/src/types/: mod.rs  models.rs
src-tauri/src/voice_input/: hotkey.rs  insertion.rs  mod.rs  overlay.rs  platform_hotkey.rs  recorder.rs  text.rs  warmup.rs
(+94 files in other folders)
