[package]
name = "hit-vvc"
version = "0.2.0"
description = "Local ASR and LLM meeting summary app"
authors = ["you"]
license = "AGPL-3.0-or-later"
repository = ""
edition = "2021"

[lib]
name = "voice_vibe_local_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [ "protocol-asset", "macos-private-api"] }
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
# Use the same cpal fork as the original project
cpal = { git = "https://github.com/Kree0/cpal.git", branch = "master" }
hound = "3.5"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
bytemuck = "1.14"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
rubato = "0.15"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
mime_guess = "2.0"
docx-rs = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
keyring = "2.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
